--- a/hearthstone-frontend/index.html
+++ b/hearthstone-frontend/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
-    <script src="scripts/index.js"></script>
+    <script src="src/index.js"></script>
 </head>
 <body>
     
