began on heros section

--- a/hearthstone-frontend/index.html
+++ b/hearthstone-frontend/index.html
@@ -14,8 +14,12 @@
     <script src="src/index.js"></script>
 </head>
 <body>
-    <header class="container bg-info">
+    <header class="container bg-info d-flex align-items-center">
         <img src="src/img/hearthstone_banner.png" alt="">
+        <h2 class="text-white">HearthStone Deck Builder</h2>
     </header>
+    <section id="heros-section" class="container bg-light py-5">
+
+    </section>
 </body>
 </html>
