stubbed out card display

--- a/hearthstone-frontend/index.html
+++ b/hearthstone-frontend/index.html
@@ -18,8 +18,16 @@
         <img src="src/img/hearthstone_banner.png" alt="">
         <h2 class="text-white">HearthStone Deck Builder</h2>
     </header>
-    <section id="heros-section" class="container bg-light py-5">
 
+    <section id="heros-section" class="container bg-light py-5">
+    </section>
+
+    <section id="main" class="container bg-light pb-5 d-flex justify-content-between">
+            <div id="cards-container" class="col-md-8 px-0">
+                <div id="query-container" class="py-4 bg-dark mb-3"></div>
+                <div id="cards-display" class="col-12 bg-success py-5"></div>
+            </div>
+            <div class="col-md-3 bg-info py-5"></div>
     </section>
 </body>
 </html>
