--- a/hearthstone-frontend/index.html
+++ b/hearthstone-frontend/index.html
@@ -25,7 +25,7 @@
     <section id="main" class="container bg-light pb-5 d-flex justify-content-between">
             <div id="cards-container" class="col-md-8 px-0">
                 <div id="query-container" class="py-4 bg-dark mb-3"></div>
-                <div id="cards-display" class="row d-flex flew-wrap overflow-auto bg-success py-5"></div>
+                <div id="cards-display" class="row d-flex flew-wrap overflow-auto bg-light py-5"></div>
             </div>
             <div class="col-md-3 bg-info py-5"></div>
     </section>
