--- a/hearthstone-frontend/index.html
+++ b/hearthstone-frontend/index.html
@@ -25,7 +25,13 @@
     <section id="main" class="container bg-light pb-5 d-flex justify-content-between">
             <div id="cards-container" class="col-md-8 px-0">
                 <div id="query-container" class="py-4 bg-dark mb-3"></div>
-                <div id="cards-display" class="row d-flex flew-wrap overflow-auto bg-light py-5"></div>
+                <div>
+                    <div class="row">
+                        <div class="col-6 bg-info py-3 text-white">Class</div>
+                        <div class="col-6 bg-danger py-3 text-white">Neutral</div>
+                    </div>
+                    <div id="cards-display" class="row d-flex flew-wrap overflow-auto bg-info py-5"></div>
+                </div>
             </div>
             <div class="col-md-3 bg-info py-5"></div>
     </section>
