--- a/hearthstone-frontend/index.html
+++ b/hearthstone-frontend/index.html
@@ -24,7 +24,27 @@
 
     <section id="main" class="container bg-light pb-5 d-flex justify-content-between">
             <div id="cards-container" class="col-md-8 px-0">
-                <div id="query-container" class="py-4 bg-dark mb-3"></div>
+                <div id="query-container" class="row mb-3 d-flex flex-wrap">
+                    <div class="px-1 pb-2 col-xs-12 col-sm-6 col-md-4 col-lg-3">
+                        <div class="query-field col-12 bg-dark"></div>
+                    </div>
+                    <div class="px-1 pb-2 col-xs-12 col-sm-6 col-md-4 col-lg-3">
+                        <div class="query-field col-12 bg-dark"></div>
+                    </div>
+                    <div class="px-1 pb-2 col-xs-12 col-sm-6 col-md-4 col-lg-3">
+                        <div class="query-field col-12 bg-dark"></div>
+                    </div>
+                    <div class="px-1 pb-2 col-xs-12 col-sm-6 col-md-4 col-lg-3">
+                        <div class="query-field col-12 bg-dark"></div>
+                    </div>
+                    <div class="px-1 pb-2 col-xs-12 col-sm-6 col-md-4 col-lg-3">
+                        <div class="query-field col-12 bg-dark"></div>
+                    </div>
+                    <div class="px-1 pb-2 col-xs-12 col-sm-6 col-md-4 col-lg-3">
+                        <div class="query-field col-12 bg-dark"></div>
+                    </div>
+                    
+                </div>
                 <div>
                     <div class="row">
                         <div id="class-select" class="col-6 py-3 text-white active" onclick="switchCardType(this)">Class</div>
