added buttons for querying

--- a/hearthstone-frontend/index.html
+++ b/hearthstone-frontend/index.html
@@ -25,24 +25,60 @@
     <section id="main" class="container bg-light pb-5 d-flex justify-content-between">
             <div id="cards-container" class="col-md-8 px-0">
                 <div id="query-container" class="row mb-3 d-flex flex-wrap">
-                    <div class="px-1 pb-2 col-xs-12 col-sm-6 col-md-4 col-lg-3">
-                        <div class="query-field col-12 bg-dark"></div>
+
+                    <div class="input-group input-group-sm px-1 pb-2 col-xs-12 col-sm-6 col-md-4 col-lg-3">
+                        <div class="input-group-prepend">
+                            <span class="input-group-text">@</span>
+                        </div>
+                        <input type="text" class="form-control col-12" placeholder="Search"></input>
                     </div>
-                    <div class="px-1 pb-2 col-xs-12 col-sm-6 col-md-4 col-lg-3">
-                        <div class="query-field col-12 bg-dark"></div>
+
+                    <div class="btn-group px-1 pb-2 col-xs-12 col-sm-6 col-md-4 col-lg-3">
+                        <button class="btn btn-secondary btn-sm dropdown-toggle" type="button" id="" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Rarity
+                        </button>
+                        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                            <a class="dropdown-item" href="#">Action</a>
+                        </div>
                     </div>
-                    <div class="px-1 pb-2 col-xs-12 col-sm-6 col-md-4 col-lg-3">
-                        <div class="query-field col-12 bg-dark"></div>
+
+                    <div class="btn-group px-1 pb-2 col-xs-12 col-sm-6 col-md-4 col-lg-3">
+                        <button class="btn btn-secondary btn-sm dropdown-toggle" type="button" id="" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Mana
+                        </button>
+                        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                            <a class="dropdown-item" href="#">Action</a>
+                        </div>
                     </div>
-                    <div class="px-1 pb-2 col-xs-12 col-sm-6 col-md-4 col-lg-3">
-                        <div class="query-field col-12 bg-dark"></div>
+
+                    <div class="btn-group px-1 pb-2 col-xs-12 col-sm-6 col-md-4 col-lg-3">
+                        <button class="btn btn-secondary btn-sm dropdown-toggle" type="button" id="" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Race
+                        </button>
+                        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                            <a class="dropdown-item" href="#">Action</a>
+                        </div>
                     </div>
-                    <div class="px-1 pb-2 col-xs-12 col-sm-6 col-md-4 col-lg-3">
-                        <div class="query-field col-12 bg-dark"></div>
+
+                    <div class="btn-group px-1 pb-2 col-xs-12 col-sm-6 col-md-4 col-lg-3">
+                        <button class="btn btn-secondary btn-sm dropdown-toggle" type="button" id="" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Type
+                        </button>
+                        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                            <a class="dropdown-item" href="#">Action</a>
+                        </div>
                     </div>
-                    <div class="px-1 pb-2 col-xs-12 col-sm-6 col-md-4 col-lg-3">
-                        <div class="query-field col-12 bg-dark"></div>
+
+                    <div class="btn-group px-1 pb-2 col-xs-12 col-sm-6 col-md-4 col-lg-3">
+                        <button class="btn btn-info btn-sm dropdown-toggle" type="button" id="" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Decks
+                        </button>
+                        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                            <a class="dropdown-item" href="#">Action</a>
+                        </div>
                     </div>
+
+
                     
                 </div>
                 <div>
