--- a/hearthstone-frontend/index.html
+++ b/hearthstone-frontend/index.html
@@ -27,59 +27,73 @@
     <section id="main" class="container bg-light pb-5 d-flex justify-content-between">
             <div id="cards-container" class="col-md-8 px-0">
                 <div id="query-container" class="row mb-3 d-flex flex-wrap">
-
-                    <div class="input-group input-group-sm px-1 pb-2 col-xs-12 col-sm-6 col-md-4 col-lg-3">
-                        <div class="input-group-prepend">
-                            <span class="input-group-text">@</span>
+                    <form class="col-12 d-flex flex-wrap p-0">
+                        <div class="input-group input-group-sm px-1 pb-2 col-xs-12 col-sm-6 col-md-4 col-lg-3">
+                            <div class="input-group-prepend">
+                                <span class="input-group-text">@</span>
+                            </div>
+                            <input type="text" class="form-control col-12" placeholder="Search"></input>
                         </div>
-                        <input type="text" class="form-control col-12" placeholder="Search"></input>
-                    </div>
 
-                    <div class="btn-group px-1 pb-2 col-xs-12 col-sm-6 col-md-4 col-lg-3">
-                        <button class="btn btn-secondary btn-sm dropdown-toggle" type="button" id="" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            Rarity
-                        </button>
-                        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                            <a class="dropdown-item" href="#">Action</a>
+                        <div class="input-group input-group-sm px-1 pb-2 col-xs-12 col-sm-6 col-md-4 col-lg-3">
+                            <select name="rarity" class="form-control">
+                                <option selected>All Rarity</option>
+                                <option value="free">Free</option>
+                                <option value="common">Common</option>
+                                <option value="rare">Rare</option>
+                                <option value="epic">Epic</option>
+                                <option value="legendary">Legendary</option>
+                            </select>
                         </div>
-                    </div>
 
-                    <div class="btn-group px-1 pb-2 col-xs-12 col-sm-6 col-md-4 col-lg-3">
-                        <button class="btn btn-secondary btn-sm dropdown-toggle" type="button" id="" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            Mana
-                        </button>
-                        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                            <a class="dropdown-item" href="#">Action</a>
+                        <div class="input-group input-group-sm px-1 pb-2 col-xs-12 col-sm-6 col-md-4 col-lg-3">
+                            <select name="cost" class="form-control">
+                                <option selected>All Cost</option>
+                                <option value="0">0</option>
+                                <option value="1">1</option>
+                                <option value="2">2</option>
+                                <option value="3">3</option>
+                                <option value="4">4</option>
+                                <option value="5">5</option>
+                                <option value="6">6</option>
+                                <option value="7">7+</option>
+                            </select>
                         </div>
-                    </div>
 
-                    <div class="btn-group px-1 pb-2 col-xs-12 col-sm-6 col-md-4 col-lg-3">
-                        <button class="btn btn-secondary btn-sm dropdown-toggle" type="button" id="" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            Race
-                        </button>
-                        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                            <a class="dropdown-item" href="#">Action</a>
+                        <div class="input-group input-group-sm px-1 pb-2 col-xs-12 col-sm-6 col-md-4 col-lg-3">
+                            <select name="race" class="form-control">
+                                <option selected>All Races</option>
+                                <option value="beast">Beast</option>
+                                <option value="demon">Demon</option>
+                                <option value="dragon">Dragon</option>
+                                <option value="elemental">Elemental</option>
+                                <option value="mech">Mech</option>
+                                <option value="murloc">Murloc</option>
+                                <option value="pirate">Pirate</option>
+                                <option value="totem">Totem</option>
+                            </select>
                         </div>
-                    </div>
 
-                    <div class="btn-group px-1 pb-2 col-xs-12 col-sm-6 col-md-4 col-lg-3">
-                        <button class="btn btn-secondary btn-sm dropdown-toggle" type="button" id="" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            Type
-                        </button>
-                        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                            <a class="dropdown-item" href="#">Action</a>
+
+                        <div class="input-group input-group-sm px-1 pb-2 col-xs-12 col-sm-6 col-md-4 col-lg-3">
+                            <select name="type" class="form-control">
+                                <option selected>All Types</option>
+                                <option value="enchantment">Enchantment</option>
+                                <option value="hero">Hero</option>
+                                <option value="hero-power">Hero Power</option>
+                                <option value="minion">Minion</option>
+                                <option value="spell">Spell</option>
+                                <option value="weapon">Weapon</option>
+                            </select>
                         </div>
-                    </div>
 
-                    <div class="btn-group px-1 pb-2 col-xs-12 col-sm-6 col-md-4 col-lg-3">
-                        <button class="btn btn-info btn-sm dropdown-toggle" type="button" id="" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            Decks
-                        </button>
-                        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                            <a class="dropdown-item" href="#">Action</a>
+                        <div class="input-group input-group-sm px-1 pb-2 col-xs-12 col-sm-6 col-md-4 col-lg-3">
+                            <select name="decks" class="form-control bg-info">
+                                <option selected>Decks</option>
+                            </select>
                         </div>
-                    </div>
 
+                    </form>
 
                     
                 </div>
