--- a/hearthstone-frontend/index.html
+++ b/hearthstone-frontend/index.html
@@ -97,8 +97,8 @@
                 </div>
                 <div>
                     <div class="row">
-                        <div id="class-select" class="col-6 py-3 text-white active" onclick="updateCardsDisplayed('', 'classic')">Class</div>
-                        <div id="neutral-select" class="col-6 py-3 text-white inactive" onclick="updateCardsDisplayed('', 'neutral')">Neutral</div>
+                        <div id="class-select" class="col-6 py-3 text-white active" onclick="updateCardsDisplayed('', 'Classic')">Class</div>
+                        <div id="neutral-select" class="col-6 py-3 text-white inactive" onclick="updateCardsDisplayed('', 'Neutral')">Neutral</div>
                     </div>
                     <div id="cards-display" class="row d-flex flew-wrap overflow-auto bg-info py-3"></div>
                 </div>
