--- a/hearthstone-frontend/index.html
+++ b/hearthstone-frontend/index.html
@@ -32,7 +32,7 @@
                             <div class="input-group-prepend">
                                 <span class="input-group-text">@</span>
                             </div>
-                            <input name="name" type="text" class="form-control col-12" placeholder="Search"></input>
+                            <input id="search_field" name="search_field" type="search" class="form-control col-12" placeholder="Search" onkeyup="updateCardsDisplayed()" onsubmit="event.preventDefault()"></input>
                         </div>
 
                         <div class="input-group input-group-sm px-1 pb-2 col-xs-12 col-sm-6 col-md-4 col-lg-3">
