--- a/hearthstone-frontend/index.html
+++ b/hearthstone-frontend/index.html
@@ -103,7 +103,12 @@
                     <div id="cards-display" class="row d-flex flew-wrap overflow-auto bg-info py-3"></div>
                 </div>
             </div>
-            <div class="col-md-3 bg-info py-5"></div>
+            <div id="deck-container" class="d-flex col-md-3 bg-info p-0 m-0">
+                <div id="deck-class" class="d-flex align-items-center col-12 p-0 text-white">
+                    <h3>Priest</h3>
+                    <img id="deck-image" src="" alt="">
+                </div>
+            </div>
     </section>
 </body>
 </html>
