made edits to deck builder

--- a/hearthstone-frontend/index.html
+++ b/hearthstone-frontend/index.html
@@ -13,6 +13,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
     <script src="src/hero.js"></script>
     <script src="src/card.js"></script>
+    <script src="src/deck.js"></script>
     <script src="src/index.js"></script>
 </head>
 <body>
@@ -103,10 +104,12 @@
                     <div id="cards-display" class="row d-flex flew-wrap overflow-auto bg-info py-3"></div>
                 </div>
             </div>
-            <div id="deck-container" class="d-flex col-md-3 bg-info p-0 m-0">
-                <div id="deck-class" class="d-flex align-items-center col-12 p-0 text-white">
+            <div id="deck-container" class="col-md-3 p-0 m-0">
+                <div id="deck-class" class="row d-flex align-items-center p-0 mx-0 mb-2 text-white">
                     <h3>Priest</h3>
                     <img id="deck-image" src="" alt="">
+                </div>
+                <div id="deck-cards" class="row m-0">
                 </div>
             </div>
     </section>
