deck accounts for amount of cards

--- a/hearthstone-frontend/index.html
+++ b/hearthstone-frontend/index.html
@@ -105,12 +105,18 @@
                 </div>
             </div>
             <div id="deck-container" class="col-md-3 p-0 m-0">
-                <div id="deck-class" class="row d-flex align-items-center p-0 mx-0 mb-2 text-white">
-                    <h3>Priest</h3>
+                <div id="deck-class" class="row d-flex align-items-center p-0 mx-0 mb-1 text-white">
+                    <h3></h3>
                     <img id="deck-image" src="" alt="">
                 </div>
-                <div id="deck-cards" class="row m-0">
+                <div id="deck-info" class="row px-0 bg-danger mb-1 mx-0">
+                    <div id="deck-graph" class="col-12 bg-success px-0 py-5 border-bottom border-white"></div>
+                    <div id="deck-stats" class="col-12 d-flex px-0 bg-info">
+                        <div id="deck-count" class="col-6 py-0 pl-2 text-white">0/30</div>
+                        <div id="deck-dust" class="col-6 py-0 pr-2 text-white text-right">Dust</div>
+                    </div>
                 </div>
+                <div id="deck-cards" class="row m-0"></div>
             </div>
     </section>
 </body>
