--- a/hearthstone-frontend/index.html
+++ b/hearthstone-frontend/index.html
@@ -112,7 +112,7 @@
                 <div id="deck-info" class="row px-0 bg-danger mb-1 mx-0">
                     <div id="deck-stats" class="col-12 d-flex px-0 bg-dark">
                         <div id="deck-count" class="col-6 py-0 pl-2 text-info">0/30</div>
-                        <div id="deck-dust" class="col-6 py-0 pr-2 text-info text-right">Dust</div>
+                        <div id="deck-dust" class="col-6 py-0 pr-2 text-info bg-info d-flex align-items-center justify-content-right"><span id="dust-icon" class="d-block"></span></div>
                     </div>
                 </div>
                 <div id="deck-cards" class="row m-0"></div>
