added search icon to input

--- a/hearthstone-frontend/index.html
+++ b/hearthstone-frontend/index.html
@@ -31,7 +31,7 @@
                     <form id="query-form" class="col-12 d-flex flex-wrap p-0" onchange="updateCardsDisplayed()" onsubmit="event.preventDefault()">
                         <div class="input-group input-group-sm px-1 pb-2 col-xs-12 col-sm-6 col-md-4 col-lg-3">
                             <div class="input-group-prepend">
-                                <span class="input-group-text">@</span>
+                                <span class="input-group-text">&#128270;</span>
                             </div>
                             <input id="search_field" name="search_field" type="search" class="form-control col-12" placeholder="Search" onkeyup="updateCardsDisplayed()" onsubmit="event.preventDefault()"></input>
                         </div>
