--- a/index.html
+++ b/index.html
@@ -18,104 +18,102 @@
 </head>
 <body>
     <header class="container bg-info d-flex align-items-center">
-        <img src="src/img/hearthstone_banner.png" alt="">
+        <img class="d-none d-md-block" src="src/img/hearthstone_banner.png" alt="">
         <h2 class="text-white">HearthStone Deck Builder</h2>
     </header>
 
     <section id="heros-section" class="container bg-light py-5">
     </section>
 
-    <section id="main" class="container bg-light pb-5 d-flex justify-content-between">
-            <div id="cards-container" class="col-md-8 px-0">
-                <div id="query-container" class="row mb-3 d-flex flex-wrap">
-                    <form id="query-form" class="col-12 d-flex flex-wrap p-0" onchange="updateCardsDisplayed()" onsubmit="event.preventDefault()">
-                        <div class="input-group input-group-sm px-1 pb-2 col-xs-12 col-sm-6 col-md-4 col-lg-3">
-                            <div class="input-group-prepend">
-                                <span class="input-group-text">&#128270;</span>
-                            </div>
-                            <input id="search_field" name="search_field" type="search" class="form-control col-12" placeholder="Search" onkeyup="updateCardsDisplayed()" onsubmit="event.preventDefault()"></input>
-                        </div>
-
-                        <div class="input-group input-group-sm px-1 pb-2 col-xs-12 col-sm-6 col-md-4 col-lg-3">
-                            <select id="select-rarity" name="rarity" class="form-control">
-                                <option value="" selected>All Rarity</option>
-                                <option value="Free">Free</option>
-                                <option value="Common">Common</option>
-                                <option value="Rare">Rare</option>
-                                <option value="Epic">Epic</option>
-                                <option value="Legendary">Legendary</option>
-                            </select>
-                        </div>
-
-                        <div class="input-group input-group-sm px-1 pb-2 col-xs-12 col-sm-6 col-md-4 col-lg-3">
-                            <select id="select-cost" name="cost" class="form-control">
-                                <option value="" selected>All Cost</option>
-                                <option value="0">0</option>
-                                <option value="1">1</option>
-                                <option value="2">2</option>
-                                <option value="3">3</option>
-                                <option value="4">4</option>
-                                <option value="5">5</option>
-                                <option value="6">6</option>
-                                <option value="7">7+</option>
-                            </select>
-                        </div>
-
-                        <div class="input-group input-group-sm px-1 pb-2 col-xs-12 col-sm-6 col-md-4 col-lg-3">
-                            <select id="select-race" name="race" class="form-control">
-                                <option value="" selected>All Races</option>
-                                <option value="Beast">Beast</option>
-                                <option value="Demon">Demon</option>
-                                <option value="Dragon">Dragon</option>
-                                <option value="Elemental">Elemental</option>
-                                <option value="Mech">Mech</option>
-                                <option value="Murloc">Murloc</option>
-                                <option value="Pirate">Pirate</option>
-                                <option value="Totem">Totem</option>
-                            </select>
-                        </div>
-
-
-                        <div class="input-group input-group-sm px-1 pb-2 col-xs-12 col-sm-6 col-md-4 col-lg-3">
-                            <select id="select-type" name="type" class="form-control">
-                                <option value="" selected>All Types</option>
-                                <option value="Enchantment">Enchantment</option>
-                                <option value="Hero">Hero</option>
-                                <option value="Hero-Power">Hero Power</option>
-                                <option value="Minion">Minion</option>
-                                <option value="Spell">Spell</option>
-                                <option value="Weapon">Weapon</option>
-                            </select>
-                        </div>
-
-                        <div class="input-group input-group-sm px-1 pb-2 col-xs-12 col-sm-6 col-md-4 col-lg-3">
-                            <button class="btn form-control bg-info text-white" onclick="updateCardsDisplayed()">Reset</button>
-                        </div>
-
-                    </form>
-
-                    
-                </div>
-                <div>
-                    <div class="row">
-                        <div id="class-select" class="col-6 py-3 text-white set-option active" onclick="updateCardsDisplayed('', 'Classic')">Class</div>
-                        <div id="neutral-select" class="col-6 py-3 text-white set-option" onclick="updateCardsDisplayed('', 'Neutral')">Neutral</div>
+    <section id="main" class="container bg-light pb-5">
+        <div id="query-container" class="col-12 col-md-8 mb-3 d-flex flex-wrap">
+            <form id="query-form" class="col-12 d-flex flex-wrap p-0" onchange="updateCardsDisplayed()" onsubmit="event.preventDefault()">
+                <div class="input-group input-group-sm px-1 pb-2 col-xs-12 col-sm-6 col-md-4 col-lg-3">
+                    <div class="input-group-prepend">
+                        <span class="input-group-text">&#128270;</span>
                     </div>
-                    <div id="cards-display" class="row d-flex flew-wrap overflow-auto bg-info py-3"></div>
+                    <input id="search_field" name="search_field" type="search" class="form-control col-12" placeholder="Search" onkeyup="updateCardsDisplayed()" onsubmit="event.preventDefault()"></input>
+                </div>
+
+                <div class="input-group input-group-sm px-1 pb-2 col-xs-12 col-sm-6 col-md-4 col-lg-3">
+                    <select id="select-rarity" name="rarity" class="form-control">
+                        <option value="" selected>All Rarity</option>
+                        <option value="Free">Free</option>
+                        <option value="Common">Common</option>
+                        <option value="Rare">Rare</option>
+                        <option value="Epic">Epic</option>
+                        <option value="Legendary">Legendary</option>
+                    </select>
+                </div>
+
+                <div class="input-group input-group-sm px-1 pb-2 col-xs-12 col-sm-6 col-md-4 col-lg-3">
+                    <select id="select-cost" name="cost" class="form-control">
+                        <option value="" selected>All Cost</option>
+                        <option value="0">0</option>
+                        <option value="1">1</option>
+                        <option value="2">2</option>
+                        <option value="3">3</option>
+                        <option value="4">4</option>
+                        <option value="5">5</option>
+                        <option value="6">6</option>
+                        <option value="7">7+</option>
+                    </select>
+                </div>
+
+                <div class="input-group input-group-sm px-1 pb-2 col-xs-12 col-sm-6 col-md-4 col-lg-3">
+                    <select id="select-race" name="race" class="form-control">
+                        <option value="" selected>All Races</option>
+                        <option value="Beast">Beast</option>
+                        <option value="Demon">Demon</option>
+                        <option value="Dragon">Dragon</option>
+                        <option value="Elemental">Elemental</option>
+                        <option value="Mech">Mech</option>
+                        <option value="Murloc">Murloc</option>
+                        <option value="Pirate">Pirate</option>
+                        <option value="Totem">Totem</option>
+                    </select>
+                </div>
+
+
+                <div class="input-group input-group-sm px-1 pb-2 col-xs-12 col-sm-6 col-md-4 col-lg-3">
+                    <select id="select-type" name="type" class="form-control">
+                        <option value="" selected>All Types</option>
+                        <option value="Enchantment">Enchantment</option>
+                        <option value="Hero">Hero</option>
+                        <option value="Hero-Power">Hero Power</option>
+                        <option value="Minion">Minion</option>
+                        <option value="Spell">Spell</option>
+                        <option value="Weapon">Weapon</option>
+                    </select>
+                </div>
+
+                <div class="input-group input-group-sm px-1 pb-2 col-xs-12 col-sm-6 col-md-4 col-lg-3">
+                    <button class="btn form-control bg-info text-white" onclick="updateCardsDisplayed()">Reset</button>
+                </div>
+
+            </form>
+
+            
+        </div>
+        <div id="deck-container" class="col-12 col-md-3 p-0 mb-3 m-0 float-right">
+            <div id="deck-class" class="row d-flex align-items-center p-0 mx-0 mb-1 text-white">
+                <h3></h3>
+                <img id="deck-image" src="" alt="">
+            </div>
+            <div id="deck-info" class="row px-0 bg-danger mb-1 mx-0">
+                <div id="deck-stats" class="col-12 d-flex px-0 bg-dark">
+                    <div id="deck-count" class="col-12 py-0 pl-2 text-info">0/30</div>
                 </div>
             </div>
-            <div id="deck-container" class="col-md-3 p-0 m-0">
-                <div id="deck-class" class="row d-flex align-items-center p-0 mx-0 mb-1 text-white">
-                    <h3></h3>
-                    <img id="deck-image" src="" alt="">
-                </div>
-                <div id="deck-info" class="row px-0 bg-danger mb-1 mx-0">
-                    <div id="deck-stats" class="col-12 d-flex px-0 bg-dark">
-                        <div id="deck-count" class="col-12 py-0 pl-2 text-info">0/30</div>
-                    </div>
-                </div>
-                <div id="deck-cards" class="row m-0"></div>
+            <div id="deck-cards" class="row m-0"></div>
+        </div>
+        <div id="cards-container" class="col-12 col-md-8 px-3">
+            <div class="row">
+                <div id="class-select" class="col-6 py-3 text-white set-option active" onclick="updateCardsDisplayed('', 'Classic')">Class</div>
+                <div id="neutral-select" class="col-6 py-3 text-white set-option" onclick="updateCardsDisplayed('', 'Neutral')">Neutral</div>
             </div>
+            <div id="cards-display" class="row d-flex flew-wrap overflow-auto bg-info py-3"></div>
+        </div>
     </section>
 </body>
 </html>
